# Grocery_mart_Application

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  analytics_dashboard.py  auth_service.py  dashboard.py  database.py  extra_panel.py  home_panel.py  init_db.py  inventory_manager.py  invoice_generator.py  main.py  product_manager.py  pyproject.toml  requirements-camera.txt  requirements-dev.txt  requirements.txt  sales_manager.py  settings_manager.py  supplier_manager.py  user_auth.py
.github/workflows/: ci.yml  publish-pypi.yml
docs/: DESCRIPTION.md  README.md  USAGE.md
grocery_mart_application/: analytics_dashboard.py  auth_service.py  dashboard.py  database.py  extra_panel.py  grocery_app.py  home_panel.py  init_db.py  inventory_manager.py  main.py  product_manager.py  sales_manager.py  settings_manager.py  supplier_manager.py  user_auth.py
grocery_mart_application/styles/: app_settings.json
grocery_mart_application/utils/: app_settings.py
scripts/: seed_demo.py
styles/: theme.json
tests/: test_smoke.py
utils/: app_settings.py  helpers.py
